[metadata]
name = pwdhash
version = 0.0.1
author = Eric Duminil
author_email = pwdhash@ericduminil.com
description = A python implementation of PwdHash 1 and 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EricDuminil/pwdhash-py
project_urls =
    Bug Tracker = https://github.com/EricDuminil/pwdhash-py
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
